# local-stt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CI-SETUP-REPORT.md  CONTRIBUTING.md  DOCS-REPORT.md  EXECUTION-LOG.md  LICENSE  PHASES-FIX-FINAL.md  PHASES-FIX.md  PHASES.md  READINESS-REPORT.md  README.md  REVIEW-CRITIQUE.md  REVIEW-TACTICS.md  TEST-REPORT.md  cursorrules  cursorrules-react-dark  cursorrules-rust-tauri  index.html  package-lock.json  package.json  prompt.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agent-memory-local/debugger/: MEMORY.md  fixes.md
.claude/agent-memory/backend/: MEMORY.md
.claude/agent-memory/react-ui/: MEMORY.md
.claude/agent-memory/setup-wizard/: MEMORY.md
.claude/agent-memory/whispertype-auditor/: MEMORY.md
.claude/agents/: backend.md  debugger.md  react-ui.md  setup-wizard.md  whispertype-auditor.md
.github/workflows/: ci.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: lib.rs  main.rs
backend/src/audio/: buffer.rs  capture.rs  mod.rs  vad.rs
backend/src/commands/: config.rs  dictation.rs  mod.rs  models.rs  system.rs
backend/src/config/: mod.rs  settings.rs
backend/src/hotkey/: manager.rs
backend/src/model_manager/: download.rs  mod.rs  storage.rs
backend/src/output/: clipboard.rs  keyboard.rs  mod.rs
backend/src/transcription/: agreement.rs  engine.rs  mod.rs  models.rs  moonshine.rs
docs/: ALGORITHMS.md  API-REFERENCE.md  ARCHITECTURE.md  DEVELOPER-GUIDE.md
frontend/src/: App.tsx  index.css
frontend/src/__mocks__/: tauri.ts
frontend/src/components/: model-selector.tsx  settings-panel.tsx  status-indicator.tsx  transcript-display.tsx
frontend/src/components/setup-wizard/: index.tsx  step-complete.tsx  step-download.tsx  step-gpu.tsx  step-models.tsx
frontend/src/hooks/: use-config.ts  use-dictation.test.ts  use-dictation.ts  use-models.test.ts  use-models.ts  use-transcription.ts
frontend/src/lib/: tauri.test.ts  tauri.ts
frontend/src/pages/: main-window.tsx  setup.tsx
src-tauri/: tauri.conf.json
