[package]
name = "whispertype"
version = "0.1.0"
description = "Local AI-powered dictation desktop app"
authors = ["ponderrr <robert.ponder@selu.edu>"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.15" }
cpal = "0.15"
enigo = { version = "0.6", features = ["x11rb", "wayland"] }
arboard = "3"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
futures-util = "0.3"
ringbuf = "0.4"

[dev-dependencies]
tempfile = "3"
