[package]
name = "whispertype"
version = "0.1.0"
description = "Local, private speech-to-text powered by Whisper"
authors = ["ponderrr <robert.ponder@selu.edu>"]
license = "MIT"
homepage = "https://github.com/ponderrr/local-stt"
repository = "https://github.com/ponderrr/local-stt"
keywords = ["speech-to-text", "whisper", "tauri", "cuda", "dictation"]
categories = ["multimedia::audio", "command-line-utilities"]
edition = "2021"
default-run = "whispertype"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "list_audio"
path = "src/bin/list_audio.rs"

[[bin]]
name = "audio_diag"
path = "src/bin/audio_diag.rs"

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.15" }
cpal = "0.17"
enigo = { version = "0.6", features = ["x11rb", "wayland"] }
arboard = "3"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
futures-util = "0.3"
ringbuf = "0.4"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"

[dev-dependencies]
tempfile = "3"
